--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Chapter 2: Unit 1 Multiple Choice Test</title>
+  <title>Chapter 2</title>
   <script>
     let score = 0;
     const correctAnswers = {};
