--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <div><input type='radio' name='q1' value='C'> Harming animals intentionally</div>
     <div><input type='radio' name='q1' value='D'> Taking care of a pet</div>
   </div>
+    <button onclick="checkAnswer('q1')">Next</button>
 </div>
 
 <div class='question' id='question2'>
@@ -57,6 +58,7 @@
     <div><input type='radio' name='q2' value='C'> Having physical control over an item</div>
     <div><input type='radio' name='q2' value='D'> None of the above</div>
   </div>
+    <button onclick="checkAnswer('q2')">Next</button>
 </div>
 
 <div class='question' id='question3'>
@@ -67,6 +69,7 @@
     <div><input type='radio' name='q3' value='C'> Making a mistake</div>
     <div><input type='radio' name='q3' value='D'> Repairing someone else's property</div>
   </div>
+    <button onclick="checkAnswer('q3')">Next</button>
 </div>
 
 <div class='question' id='question4'>
@@ -77,6 +80,7 @@
     <div><input type='radio' name='q4' value='C'> A sign that provides directions</div>
     <div><input type='radio' name='q4' value='D'> None of the above</div>
   </div>
+    <button onclick="checkAnswer('q4')">Next</button>
 </div>
 
 <div class='question' id='question5'>
@@ -87,6 +91,7 @@
     <div><input type='radio' name='q5' value='C'> Making animal sounds</div>
     <div><input type='radio' name='q5' value='D'> Whispering secrets</div>
   </div>
+    <button onclick="checkAnswer('q5')">Next</button>
 </div>
 
 <div class='question' id='question6'>
@@ -97,6 +102,7 @@
     <div><input type='radio' name='q6' value='C'> Using a legal substance responsibly</div>
     <div><input type='radio' name='q6' value='D'> None of the above</div>
   </div>
+    <button onclick="checkAnswer('q6')">Next</button>
 </div>
 
 <div class='question' id='question7'>
@@ -107,6 +113,7 @@
     <div><input type='radio' name='q7' value='C'> Stealing an item from a store</div>
     <div><input type='radio' name='q7' value='D'> Borrowing an item without permission</div>
   </div>
+    <button onclick="checkAnswer('q7')">Next</button>
 </div>
 
 <div class='question' id='question8'>
@@ -117,6 +124,7 @@
     <div><input type='radio' name='q8' value='C'> Borrowing an item without permission</div>
     <div><input type='radio' name='q8' value='D'> Finding and keeping a lost item</div>
   </div>
+    <button onclick="checkAnswer('q8')">Next</button>
 </div>
 
 <div class='question' id='question9'>
@@ -127,6 +135,7 @@
     <div><input type='radio' name='q9' value='C'> Borrowing an item without permission</div>
     <div><input type='radio' name='q9' value='D'> Finding and keeping a lost item</div>
   </div>
+    <button onclick="checkAnswer('q9')">Next</button>
 </div>
 
 <div class='question' id='question10'>
@@ -137,6 +146,7 @@
     <div><input type='radio' name='q10' value='C'> Copying someone's work without permission</div>
     <div><input type='radio' name='q10' value='D'> All of the above</div>
   </div>
+    <button onclick="checkAnswer('q10')">Next</button>
 </div>
 
 <div class='question' id='question11'>
@@ -147,6 +157,7 @@
     <div><input type='radio' name='q11' value='C'> Making an honest mistake</div>
     <div><input type='radio' name='q11' value='D'> None of the above</div>
   </div>
+    <button onclick="checkAnswer('q11')">Next</button>
 </div>
 
 <div class='question' id='question12'>
@@ -157,6 +168,7 @@
     <div><input type='radio' name='q12' value='C'> Sharing your own personal information</div>
     <div><input type='radio' name='q12' value='D'> Forgetting your own personal information</div>
   </div>
+    <button onclick="checkAnswer('q12')">Next</button>
 </div>
 
 <div class='question' id='question13'>
@@ -167,6 +179,7 @@
     <div><input type='radio' name='q13' value='C'> Causing a public disturbance</div>
     <div><input type='radio' name='q13' value='D'> A and B</div>
   </div>
+    <button onclick="checkAnswer('q13')">Next</button>
 </div>
 
 <div class='question' id='question14'>
@@ -177,6 +190,7 @@
     <div><input type='radio' name='q14' value='C'> Remaining in a place without apparent reason</div>
     <div><input type='radio' name='q14' value='D'> Jogging in a park</div>
   </div>
+    <button onclick="checkAnswer('q14')">Next</button>
 </div>
 
 <div class='question' id='question15'>
@@ -187,6 +201,7 @@
     <div><input type='radio' name='q15' value='C'> A shopping mall</div>
     <div><input type='radio' name='q15' value='D'> B and C</div>
   </div>
+    <button onclick="checkAnswer('q15')">Next</button>
 </div>
 
 <div class='question' id='question16'>
@@ -197,6 +212,7 @@
     <div><input type='radio' name='q16' value='C'> Knowing where an item is but not having it</div>
     <div><input type='radio' name='q16' value='D'> Borrowing an item from someone</div>
   </div>
+    <button onclick="checkAnswer('q16')">Next</button>
 </div>
 
 <div class='question' id='question17'>
@@ -207,6 +223,7 @@
     <div><input type='radio' name='q17' value='C'> Owning something legally</div>
     <div><input type='radio' name='q17' value='D'> Borrowing an item from someone</div>
   </div>
+    <button onclick="checkAnswer('q17')">Next</button>
 </div>
 
 <div class='question' id='question18'>
@@ -217,6 +234,7 @@
     <div><input type='radio' name='q18' value='C'> Over-the-counter medication</div>
     <div><input type='radio' name='q18' value='D'> Medical equipment</div>
   </div>
+    <button onclick="checkAnswer('q18')">Next</button>
 </div>
 
 <div class='question' id='question19'>
@@ -227,6 +245,7 @@
     <div><input type='radio' name='q19' value='C'> Borrowing someone's property without permission</div>
     <div><input type='radio' name='q19' value='D'> All of the above</div>
   </div>
+    <button onclick="checkAnswer('q19')">Next</button>
 </div>
 
 <div class='question' id='question20'>
@@ -237,6 +256,7 @@
     <div><input type='radio' name='q20' value='C'> Being under the influence of an alcoholic beverage</div>
     <div><input type='radio' name='q20' value='D'> Drinking and driving</div>
   </div>
+    <button onclick="checkAnswer('q20')">Next</button>
 </div>
 
 <div class='question' id='question21'>
@@ -247,6 +267,7 @@
     <div><input type='radio' name='q21' value='C'> Finding and keeping stolen property</div>
     <div><input type='radio' name='q21' value='D'> Reporting stolen property to the police</div>
   </div>
+    <button onclick="checkAnswer('q21')">Next</button>
 </div>
 
 <div class='question' id='question22'>
@@ -257,6 +278,7 @@
     <div><input type='radio' name='q22' value='C'> Passing by a property without entering</div>
     <div><input type='radio' name='q22' value='D'> Visiting a public place</div>
   </div>
+    <button onclick="checkAnswer('q22')">Next</button>
 </div>
 
 <div class='question' id='question23'>
@@ -267,6 +289,7 @@
     <div><input type='radio' name='q23' value='C'> Has a specific structure, usually hierarchical or paramilitary</div>
     <div><input type='radio' name='q23' value='D'> Shares areas of crime or territory with other groups</div>
   </div>
+    <button onclick="checkAnswer('q23')">Next</button>
 </div>
 
 <div class='question' id='question24'>
@@ -277,6 +300,7 @@
     <div><input type='radio' name='q24' value='C'> A social gathering at a residence with family members only</div>
     <div><input type='radio' name='q24' value='D'> A social gathering at a residence with neighbors only</div>
   </div>
+    <button onclick="checkAnswer('q24')">Next</button>
 </div>
 
 <script>
